Fixed weird overflow bug

--- a/themes/mct/assets/scss/_components.modal.scss
+++ b/themes/mct/assets/scss/_components.modal.scss
@@ -14,8 +14,10 @@
 	right: 0;
 	bottom: 0;
 	left: 0;
-	width: 100vw;
+	width: 100vw;	
 	height: 100vh;
+	max-width: none;
+	max-height: none;
 
 	color: $body-color;
 	background-color: transparent;
